<resources>
    <string name="app_name">List of films</string>
    <string name="action_about_author">About author</string>
    <string name="action_import">Import</string>
<!--    <string name="action_export">Create export file</string>-->
    <string name="action_export">Export</string>
    <string name="action_share_export">Share an export</string>
    <string name="action_export_menu">Export Menu</string>
    <string name="viewed_films_label">Viewed</string>
    <string name="to_view_films_label">To view</string>
    <string name="add_film">Add film</string>
    <string name="update_film">Update film</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="film_name_hint">Film name</string>
    <string name="is_delete_film">
        <![CDATA[
            The movie <b>%1$s</b> will be deleted
        ]]>
    </string>
    <string name="is_export_file">Do you want to create an export file?</string>
    <string name="about_author_text">Just a good man</string>
</resources>