<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        app:showAsAction="never" />
<!--    <item-->
<!--        android:id="@+id/menu_export"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_export_menu"-->
<!--        app:showAsAction="never">-->
<!--        <menu>-->
<!--            <item android:id="@+id/create_new"-->
<!--                android:title="@string/action_share_export" />-->
<!--            <item android:id="@+id/action_export"-->
<!--                android:title="@string/action_export" />-->
<!--        </menu>-->
<!--    </item>-->
    <item
        android:id="@+id/action_about_author"
        android:orderInCategory="100"
        android:title="@string/action_about_author"
        app:showAsAction="never" />
</menu>