<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ToViewFilmsFragment">


    <EditText
        android:id="@+id/add_film_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:hint="@string/film_name_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_film_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/update_film_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/add_film" />

        <Button
            android:id="@+id/update_film_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


</RelativeLayout>